- Improved: Long-tap on shopping list card on start page to open shopping mode
- Improved: Shopping list item edit page has the camera scanner frame now
- Improved: Up and down page animations
- Improved: Focus product field after unknown barcode was scanned
- Improved: Amount field in forms has a clear button which also opens keyboard
- Fixed: Swipe buttons in stock overview didn't work for last two items
- Fixed: Menu items on bottom were not clickable sometimes (#383)
- Fixed: Parent product field is locked if product is already parent product (#349)
- Fixed: Barcode chips have not cleared the barcode when removed
- Fixed: Quick mode on consume page had wrong initial state sometimes
- Fixed: Remove barcode from forms during 'clear form' action

2.0.0-alpha06
- New: Stock overview page now has list animations and offline loading
- New: 'Scan mode' is now 'Quick mode' and has a better help text (#332)
- New: Jost* typeface by Owen Earl (we hope you like it)
- New: Barcode search works on new stock overview page (#375)
- Improved: Stock information on start page
- Improved: Lock current screen orientation while camera scanner frame is visible (#358)
- Improved: Camera scanner frame now has a fixed width (#334)
- Improved: Stock overview page shortcut is now available
- Improved: Swipe behavior is now much better
- Improved: Updated translations
- Fixed: Filter didn't work on master data products page (#370)
- Fixed: Don't show inactive products on consume & purchase page (#382)
- Fixed: 'Add' button was gone in shopping lists bottom sheet
- Fixed: Location filter in new stock overview now behaves like on server (#248)
- Fixed: Products are hidden in new stock overview if "hide on stock" is active
- Fixed: Quick consume & open work again in stock overview (#386)
- Fixed: Amount which is set in product as quick consume amount is used (#359)

2.0.0-alpha05
- Improved: Language selection and behavior