@@ -9,6 +9,7 @@
 - Improved: Up and down page animations
 - Improved: Focus product field after unknown barcode was scanned
 - Improved: Amount field in forms has a clear button which also opens keyboard
+- Improved: Menu in product overview bottom sheet has a new submenu
 - Fixed: Swipe buttons in stock overview didn't work for last two items
 - Fixed: Menu items on bottom were not clickable sometimes (#383)
 - Fixed: Parent product field is locked if product is already parent product (#349)
